# swrs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: reading-a-sketchware-project.md  reading-colors.md  sketchware-versions.md
docs/reading-project-data/: reading-project.md
examples/: api_demo1.rs  decrypt.rs  encrypt.rs  parse_file.rs  parse_library.rs  parse_logic.rs  parse_project.rs  parse_resource.rs  parse_view.rs
src/: color.rs  error.rs  lib.rs  parser.rs  util.rs  utils.rs
src/api/: block.rs  code.rs  component.rs  mod.rs  screen.rs  view.rs
src/parser/: file.rs  library.rs  logic.rs  mod.rs  project.rs  resource.rs  serde_util.rs  view.rs
tests/: api_block.rs  file_parser.rs  library.rs  library_parser.rs  logic.rs  logic_parser.rs  resource_parser.rs  view.rs  view_parser.rs
