[package]
name = "swrs"
description = "A simple rust library that reads and parses a sketchware project"
authors = ["Iyxan23 <nurihsanalghifari@gmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
aes = "^0.7.5"
block-modes = "^0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"