[package]
name = "swrs"
description = "A simple rust library that reads and parses a sketchware project"
authors = ["Iyxan23 <nurihsanalghifari@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "^0.7.5"
block-modes = "^0.8.1"
chrono = { version = "^0.4.19", default-features = false, features = ["std"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_repr = "^0.1.7"
ritelinked = "0.3.2"
thiserror = "^1.0.30"
rand = "0.8.5"